--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,6 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=DIRECT,[]GEOIP,CN
+ruleset=DIRECT,[]DOMAIN-SUFFIX,baidu.com
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
